aks-cluster/04-ExternalDNS-for-AzureDNS-on-AKS/kube-manifests/02-DemoAPP/02-DemoApp-ClusterIP-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-clusterip-service
  labels:
    app: demo-app
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - port: 80
      targetPort: 80
