aks-cluster/04-ExternalDNS-for-AzureDNS-on-AKS/kube-manifests/02-DemoAPP/03-Ingress-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: www.kubekon.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app-clusterip-service
                port: 
                  number: 80
